# sandbox

./: .gitignore  README.md  credit_intent.ipynb
airflow/: docker-compose.yml
airflow/dags/: hello-airflow.py
co2/base/: data.py
covid19/: main.ipynb  prep.sh
covid19/eda/: csse-ts-err.md  csse-ts.md  csse-us.md  csse.md  fips.md  who-ts.md
data/craigslist/: database.py
data/fred/: dag.py  fred.py  main.ipynb  process.sql
fraud/: Dockerfile  README.md  docker-compse.yml  setup.sh
goProject/: main.ipynb
goProject/assets/: index.html
kaggle/co2/: README.md  main.ipynb
kaggle/sales/: main.ipynb
kaggle/titanic/: main.ipynb
learn/airflow/: Dockerfile  docker-compose.yml  requirements.txt
learn/arrow/: Dockerfile
learn/avro/: Dockerfile
learn/cassandra/: Dockerfile
learn/cpp/: Dockerfile
learn/druid/: Dockerfile
learn/elk/: Dockerfile
learn/git/: Dockerfile
learn/go/: Dockerfile  README.md  docker-compose.yml  go.mod  main.go
learn/goProject/: main.go
learn/grafana/: Dockerfile
learn/hadoop/: Dockerfile
learn/javascript/: Dockerfile
learn/jenkins/: Dockerfile
learn/js_viz/: Dockerfile  index.html  package.json
learn/kafka/: Dockerfile
learn/kubernetes/: Dockerfile
learn/llama/: Dockerfile  docker-compose.yml  jupyter_config.json  model.sh  (+1 more)
mongodb/: main.ipynb
my-app/: package-lock.json
practice/fraud/: Dockerfile  environment.yml  pyproject.toml  requirements.txt  run.sh
sales/: README.md
sample_microservice/: README.md  go.mod  main.go
wkly_alert/: alert.py  main.ipynb  metadata.yml  zillow.ipynb
(+132 files in other folders)
