[tool.poetry]
name = "fraud-detection-ml"
version = "0.1.0"
description = "Machine Learning Fraud Detection Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
tensorflow = "^2.12.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
pyyaml = "^6.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.0"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^23.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
ignore_missing_imports = true